--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-flask==3.1.0
-werkzeug==3.1.3
-transformers==4.30.2
-torch==2.0.1
+flask
+werkzeug
+transformers
+torch
 sentencepiece
 protobuf
+tokenizers
+accelerate
+numpy
+datasets
+pandas
+evaluate
+nltk
